--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <span class="characters" onclick="handleClicksBackspace()">
                 <i class="fas fa-backspace"></i>
             </span>
-            <span class="characters" onclick="handleClicks(this)">x</span>
+            <span class="characters" onclick="handleClicks(this)">*</span>
             <span class="characters" onclick="handleClicks(this)">7</span>
             <span class="characters" onclick="handleClicks(this)">8</span>
             <span class="characters" onclick="handleClicks(this)">9</span>
